# k-m

./: .gitignore  Makefile  README.md  app.py  constants.py  graphing.py  pyproject.toml  test-data.sqlite
drive_client/: resources.py
km/: constants.py  data_models.py  utils.py
km/db/: connection.py  models.py  utils.py
km/drive_client/: resources.py
km/flask_api/: app.py  config.py  routes.py
km/metrics/: similarity.py
km/nlp/: tokenizer.py
km/orchestrator/: orchestrator.py
km/representations/documents/: base.py  lda.py  tf_idf.py
km/representations/people/: aggregators.py  base.py
km/representations/users/: base.py  topic_aggregator.py  topic_concatenator.py
km/scorers/: document_scorers.py  user_scorers.py
nlp/: text_cleaning.py  tokenizer.py
notebooks/: playground.ipynb
notebooks/.ipynb_checkpoints/: playground-checkpoint.ipynb
scripts/: get_files_by_users.py  load_dataset.py  scrape_drive.py  train_model.py
streamlit_app/: graphing.py  modeling.py  styling.py  utils.py
tests/: conftest.py
tests/fixtures/people/: people.json
tests/integration/: test_drive_scrape_script.py  test_orchestrator.py
tests/unit/: conftest.py
tests/unit/orchestrator/: test_orchestrator.py
tests/unit/representations/: test_doc_representations.py  test_people_representations.py
topic_modeling/: lda.py
webapp/: package-lock.json  package.json
webapp/public/: index.html  manifest.json
webapp/src/: App.css  App.js  CoLabAPI.js  Document.js  DocumentResults.js  Keyword.js  Lab.js  LabAnalysis.js  Progress.js  SearchBar.js  User.js  UserResults.js  index.js
(+17 files in other folders)
