[tool.poetry]
name = "intelligent-knowledge-management"
version = "0.1.0"
description = ""
authors = ["Pat Steeves <patricksteeves02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^1.7.11"
structlog = "^19.2"
nltk = "^3.4"
oauth2client = "^4.1"
scikit-learn = "^0.22.0"
pytest = "^5.3"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
