[tool.poetry]
name = "intelligent-knowledge-management"
version = "0.1.0"
description = ""
authors = ["Pat Steeves <patricksteeves02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
structlog = "^19.2"
nltk = "^3.4"
scikit-learn = "^0.22.0"
sqlalchemy = "^1.3"
mypy = "^0.761.0"
pylama = "^7.7"
streamlit = "^0.56.0"
pdf2image = "^1.12.1"
plotly = "^4.5.4"
flask = "^1.1.1"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"
tqdm = "^4.43.0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
